# plugin-filecoin

./: .gitignore  .gitmodules  Cargo.toml  GRANT.md  README.md  env.sample  environment.yml  package.json  pnpm-lock.yaml  tsconfig.json
characters/: dobby.character.json  josh.character.json
client/: index.html
client/src/components/: app-sidebar.tsx
filecoin-rs/: Cargo.toml
filecoin-rs/filecoin-cli/src/: main.rs
filecoin-rs/filecoin-core/: Cargo.toml
filecoin-rs/filecoin-tauri/: tauri_tree.txt
filecoin-rs/filecoin-tauri/capabilities/: desktop.json
filecoin-rs/filecoin-tauri/pages/: KubernetesDashboard.tsx
filecoin-rs/filecoin-tauri/schemas/: acl-manifests.json  capabilities.json
filecoin-rs/filecoin-tauri/services/: filecoin.rs  wager.rs
filecoin-rs/filecoin-tauri/src-tauri/: Cargo.toml  tauri.conf.json
filecoin-rs/filecoin-tauri/src-tauri/frontend/: main.js  styles.css  telemetry.html
filecoin-rs/filecoin-tauri/src-tauri/frontend/components/: Menu.tsx
filecoin-rs/filecoin-tauri/src-tauri/frontend/pages/: DataTransfers.tsx
filecoin-rs/filecoin-tauri/src-tauri/frontend/src/: encryption.ts  filecoin-rs-bindings.ts  restore.ts  types.ts
filecoin-rs/filecoin-tauri/src-tauri/frontend/src/__test__/: storage.ts
filecoin-rs/filecoin-tauri/src-tauri/frontend/src/agent/: agent.intents.ts  agent.logger.ts  agent.permissions.ts  agent.user.ts
filecoin-rs/filecoin-tauri/src-tauri/frontend/src/backup/: backup.ts
filecoin-rs/filecoin-tauri/src-tauri/frontend/src/database/: filecoin-adapter.ts  storacha-storage.ts  storacha.ts  storage.ts
filecoin-rs/filecoin-tauri/src-tauri/frontend/src/errors/: errorHandler.ts
filecoin-rs/filecoin-tauri/src-tauri/frontend/src/network/: network.ts
filecoin-rs/src/: lib.rs
filecoin-rs/src/agent/: logs.rs  mod.rs  types.rs  user.rs
filecoin-rs/src/native/: mod.rs
src/: backup.ts  encryption.ts  filecoin-network.ts  filecoin-rs-bindings.ts  filecoinDataFetcher.ts  index.ts  main.ts  performance-monitoring.ts  types.ts
src/logs/: logger.ts
