[package]
name = "filecoin-rs"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Head <support@jeldonmusic.ocm>"]
description = "Filecoin intergrations"
repository = "https://github.com/jhead12"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
name = "filecoin_rs"
path = "src/lib.rs"

[[bin]]
name = "filecoin-rs"
path = "src/main.rs"
required-features = ["native"]

[dependencies]
cid = "0.11.1"
multihash = "0.19.3"
anyhow = "1.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fvm_ipld_blockstore = "0.3.1"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }



[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fvm = "4.6.0"
fvm_shared = "4.6.0"
fvm_ipld_blockstore = "0.3"
fvm_ipld_encoding = "0.5.2"  # Updated from 0.3.3 to align with cid 0.11.1
positioned-io = "0.3"

[features]
native = []

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3