[package]
name = "filecoin-core"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Head <support@jeldonmusic.com>"]
description = "Core Filecoin integrations for Tauri UI and decentralized storage"
repository = "https://github.com/jhead12"
license = "MIT"
readme = "../README.md"
keywords = ["Filecoin", "WASM", "Blockchain", "Decentralized"]
categories = ["blockchain", "network-programming"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "../src/lib.rs"

[dependencies]
cid = "0.11.1"
fvm_sdk = "4.7.2"  # Use a stable version when available
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
anyhow = "1.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
console_log = "1.0"
log = "0.4"
libipld = "0.16"
# Optional dependencies for advanced features:
getrandom = { version = "0.3.2", features = ["wasm_js"], optional = true }
fvm_ipld_blockstore = { version = "0.3.1", optional = true }
fvm = { version = "4.6.0", optional = true }
fvm_shared = { version = "4.6.0", optional = true }
fvm_ipld_encoding = { version = "0.5.2", optional = true }
positioned-io = { version = "0.3", optional = true }
arc = "0.0.1"  # Verify if needed; consider std::sync::Arc instead

[features]
default = []
fvm_support = ["fvm_ipld_blockstore", "fvm", "fvm_shared", "fvm_ipld_encoding"]
