[package]
name = "filecoin-tauri"
version = "0.1.0"
edition = "2021"
authors = ["Joshua Head <support@jeldonmusic.com>"]
description = "Tauri UI integration for the Filecoin management system"
repository = "https://github.com/jhead12"
license = "MIT"
readme = "../README.md"

[lib]
crate-type = ["cdylib"]  # Use this if the code is library-like; otherwise, you might use a binary

[[bin]]
name = "filecoin-tauri"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0.0-rc.2", features = ["devtools"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta = "1.0.5"
tauri-plugin-log = "2.0.0-rc.2"
tauri-plugin-opener = "2.0.0-rc.5"
reqwest = { version = "0.11", features = ["json"] }
cocoa = "0.15.0"
filecoin-core = { path = "../filecoin-core" }
